--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,9 @@
     <color name="navigationBarColor">#000000</color>
     <color name="yellow">#FF0</color>
     <color name="line_border_color_white_gray">#c0c0c0</color>
+    <color name="fb_color">#416BC1</color>
+    <color name="btn_green_">#00897B</color>
+    <color name="btn_green_border">#00695C</color>
 
-
+    <color name="input_label_hint">#999999</color>
 </resources>
