--- a/app/src/main/res/drawable/ripple_effect_login.xml
+++ b/app/src/main/res/drawable/ripple_effect_login.xml
@@ -16,7 +16,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="3.0dip" />
-            <solid android:color="@color/red" />
+            <stroke android:width="1dip" android:color="@color/btn_green_border"/>
+            <solid android:color="@color/btn_green_" />
         </shape>
     </item>
 </selector>
