--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -139,6 +139,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/padding_def</item>
+        <item name="android:inputType">number</item>
 
         <!-- <item name="android:inputType">textPassword</item>-->
     </style>
