--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+android:background="@color/white"
     tools:context="com.electrocraft.nirzo.pluse.view.activity.LoginActivity">
 
     <include
@@ -343,6 +343,16 @@
 
                 </RelativeLayout>
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_below="@+id/linearLayout"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="0dp"
+                android:layout_toStartOf="@+id/linearLayout"
+                app:srcCompat="@drawable/splash_logo" />
 
         </RelativeLayout>
     </ScrollView>
