--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
 
     tools:context="com.electrocraft.nirzo.pluse.view.activity.patient.OTP_Activity">
 
@@ -31,8 +32,8 @@
         <EditText
             android:id="@+id/login_pin_first_edittext"
             style="@style/pin_edit_text_style"
-
-            android:contentDescription="@string/pin_content_desc" />
+            android:contentDescription="@string/pin_content_desc"
+            android:inputType="number" />
 
         <EditText
             android:id="@+id/login_pin_second_edittext"
@@ -54,23 +55,14 @@
             android:id="@+id/login_pin_hidden_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:contentDescription="@string/pin_content_desc"
             android:cursorVisible="false"
             android:gravity="center"
             android:maxLength="4"
-            android:background="@color/white"
-            android:textColor="#00000000"
-             />
+            android:textColor="#00000000" />
 
-        <!--   <EditText
-               android:id="@+id/login_pin_fifth_edittext"
-               style="@style/pin_edit_text_style"
-               android:contentDescription="@string/pin_content_desc" />
 
-           <EditText
-               android:id="@+id/login_pin_sixth_edittext"
-               style="@style/pin_edit_text_style"
-               android:contentDescription="@string/pin_content_desc" />-->
     </LinearLayout>
 
 
