--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
 
-    tools:context="com.electrocraft.nirzo.pluse.view.activity.patient.OTP_Activity">
+    tools:context="com.electrocraft.nirzo.pluse.view.activity.patient.PatientOtpActivity">
 
     <include layout="@layout/appbar_layout" />
 
